# real-world-haskell

./: 02-drop.hs  03-second.hs  03-shape-union.hs  03-tree.hs  README.md
02/: last-but-one.hs  short-circuit.hs
03/: book-store.hs  guard.hs  lending.hs  list-adt.hs  patterns.hs  tuple.hs
04/: adler-32.hs  fix-lines  fix-lines.hi  fix-lines.hs  fold.hs  int-parse.hs  interact-with  interact-with.hi  interact-with.hs  safe-list-functions.hs  split-with.hs  suffix-tree.hs
05/: main.hi  mypretty.cabal  prettify.hs  prettyjson.hs  putjson.hs  simple  simplejson.hi  simplejson.hs
06/: brokenclass.hs  eqclasses.hs  jsonclass.hs  monomorphism.hs  simpleclass.hs
